<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipes</string>
    <string name="fatal_sdcard_required">Oh snap. SD card is not available
        or not writable, and this app cannot work properly like that.
        This may be improved in an upcoming version.</string>
    <string name="title_recipelist">Recipes</string>
    <string name="title_delete_recipe">Delete recipe</string>
    <string name="title_delete_photo">Delete photo</string>
    <string name="title_delete_file">Delete file</string>
    <string name="title_select_backupfile">Select backup file</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_noname_recipe">Recipe</string>
    <string name="title_recipe_details">Recipe</string>
    <string name="title_unexpected_error">Unexpected Error</string>
    <string name="error_allocating_photo_file">There was an error
        when trying to allocate a file to store the photo.
        We don\'t know how this is possible.
        Unfortunately you cannot take photos :(
        </string>
    <string name="hint_name">Name (optional)</string>
    <string name="hint_ingredient">Ingredients&#8230;</string>
    <string name="hint_memo"></string>
    <string name="note_entering_ingredients">Hint: you can add many at once, separated by comma.
        Don\'t worry about formatting, your input will be automatically normalized.</string>
    <string name="msg_no_ingredients">No ingredients. Use the input box above to add some!</string>
    <string name="hint_tag">Tags&#8230;</string>
    <string name="note_entering_tags">Hint: you can add many at once, separated by comma.
        Don\'t worry about formatting, your input will be automatically normalized.</string>
    <string name="msg_no_tags">No tags. Use the input box above to add some!</string>
    <string name="msg_created_recipe">Created recipe</string>
    <string name="msg_updated_recipe">Updated recipe</string>
    <string name="msg_cancelled_recipe">Cancelled recipe</string>
    <string name="error_update_recipe">Could not update recipe</string>
    <string name="confirm_are_you_sure">Are you sure?</string>
    <string name="msg_quit">Are you sure you want to quit?</string>
    <string name="msg_no_matching_files">No matching files</string>
    <string name="btn_add_recipe">Add recipe</string>
    <string name="btn_edit_recipe">Edit recipe</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add_ingredients">Add ingredients</string>
    <string name="btn_edit_ingredients">Edit ingredients</string>
    <string name="btn_add_tags">Add tags</string>
    <string name="btn_edit_tags">Edit tags</string>
    <string name="btn_add_photos">Add photos</string>
    <string name="btn_edit_photos">Edit photos</string>
    <string name="btn_save_recipe">Done</string>
    <string name="btn_add_photo">Take a photo</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add">Add</string>
    <string name="btn_ok">OK</string>
    <string name="btn_done">Done</string>
    <string name="label_ingredients">Ingredients: </string>
    <string name="label_tags">Tags: </string>
    <string name="label_memo">Memo: </string>
    <string name="label_none">(none)</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_quit">Quit</string>
    <string name="msg_recipe_deleted">Deleted recipe</string>
    <string name="msg_backup_created">Created backup</string>
    <string name="error_backup_failed">Backup failed</string>
    <string name="error_backup_exception">Backup failed unexpectedly</string>
    <string name="title_confirm_restore">Restore database</string>
    <string name="confirm_restore">The database will be replaced with the selected file.
        Make sure you took a backup of the current database before doing this.
        Are you sure to go ahead?</string>
    <string name="msg_restore_success">Restored database</string>
    <string name="error_restore_failed">Restore failed</string>
    <string name="error_restore_exception">Restore failed unexpectedly</string>
    <string name="bullet_recipe">[recipe]</string>
    <string name="btn_contentDescription">[btn]</string>

</resources>