<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none" >

    <TextView
        android:id="@+id/name"
        style="@style/mainHeader"
        android:text="@string/title_recipe" />

    <!--
         Dirty to hack to avoid auto-focus on the first text field
    		and android opening the soft keyboard
    -->

    <TextView
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView style="@style/mainContent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_name"
                android:singleLine="true" />

            <RelativeLayout
                android:id="@+id/ingredients_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_edit"
                android:layout_toLeftOf="@+id/btn_edit_ingredients" >

                <TextView
                    android:id="@+id/label_ingredients"
                    style="@style/recipeViewLabel"
                    android:text="@string/label_ingredients" />

                <TextView
                    android:id="@+id/ingredients"
                    style="@style/recipeViewValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/label_ingredients" />
            </RelativeLayout>

            <Button
                android:id="@id/btn_edit_ingredients"
                style="@style/recipeViewButton"
                android:layout_alignParentRight="true"
                android:layout_below="@id/name_edit"
                android:text="@string/btn_edit" />

            <RelativeLayout
                android:id="@+id/tags_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredients_container"
                android:layout_toLeftOf="@+id/btn_edit_tags" >

                <TextView
                    android:id="@+id/label_tags"
                    style="@style/recipeViewLabel"
                    android:text="@string/label_tags" />

                <TextView
                    android:id="@+id/tags"
                    style="@style/recipeViewValue"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/label_tags" />
            </RelativeLayout>

            <Button
                android:id="@id/btn_edit_tags"
                style="@style/recipeViewButton"
                android:layout_alignParentRight="true"
                android:layout_below="@id/ingredients_container"
                android:text="@string/btn_edit" />

            <Button
                android:id="@+id/btn_add_photo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tags_container"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/btn_add_photo" />

            <LinearLayout
                android:id="@+id/photos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_add_photo"
                android:orientation="vertical" >
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/btn_save_recipe" />

</LinearLayout>